# smoothmath

./: LICENSE  README.md  pyproject.toml
src/Dicordbot_qloha.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Discordbot_qloha/: check-message.py  send-message.py
src/easymath/: add.py
src/easymath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/puremath/: subtract.py
src/smoothmath/: __init__.py  evaluate.py  simplemath.py
src/smoothmath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
