[project]
name = "smoothmath"
version = "1.0.0"
authors = [
  { name="qloha", email="sirfigaloha@gmail.com" },
]
description = "A python package that makes math... smooth!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/qloha/smoothmath"
Issues = "https://github.com/qloha/smoothmath/issues"